fix: Resolve Portal layout overflow with full flex-shrink chain (#8480)

--- a/resources/scss/src/apps/portal/shared/content/Component.scss
+++ b/resources/scss/src/apps/portal/shared/content/Component.scss
@@ -5,6 +5,11 @@
 .portal-size-large {
     .portal-content-component,
     .neo-markdown-component {
-        padding: 0 250px 0 3rem;
+        min-width: 0;
+
+        @media (min-width: 1297px) {
+            margin-left: 0;
+            max-width  : min(1200px, calc(100% - 250px));
+        }
     }
 }
