--- a/resources/scss/src/apps/portal/shared/content/PageContainer.scss
+++ b/resources/scss/src/apps/portal/shared/content/PageContainer.scss
@@ -1,5 +1,7 @@
 .portal-shared-content-page-container {
     background-color: transparent;
+    flex-shrink     : 1 !important;
+    min-width       : 0;
     overflow        : auto;
 
     .content-bottom-toolbar {
